--- a/Css/style.css
+++ b/Css/style.css
@@ -118,9 +118,13 @@ p {
 canvas {
     background-color: white;
     width: 500px;
-    height: 600px;
-    margin-top: 2%;
-    margin-bottom: 5%;
+    height: 500px;
+    margin: 2%;
+}
+
+#panel-canvas {
+    margin-bottom: 10px;
+    width: 510px;
 }
 
 @media screen and (max-width: 768px) {
@@ -157,9 +161,13 @@ canvas {
     canvas {
         background-color: white;
         width: 400px;
-        height: 480px;
-        margin-top: 2%;
-        margin-bottom: 5%;
+        height: 400px;
+        margin: 2%;
+    }
+
+    #panel-canvas {
+        margin-bottom: 8px;
+        width: 408px;
     }
 }
 
@@ -198,9 +206,13 @@ canvas {
     canvas {
         background-color: white;
         width: 300px;
-        height: 360px;
-        margin-top: 2%;
-        margin-bottom: 5%;
+        height: 300px;
+        margin: 2%;
+    }
+
+    #panel-canvas {
+        margin-bottom: 6px;
+        width: 306px;
     }
 }
 
@@ -230,7 +242,5 @@ canvas {
     margin-top: 15px;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 0px;
-    width: 600px;
     border-radius: 20px;
 }
